--- a/riffshareiii/parts/exe/theme/colorwhite.css
+++ b/riffshareiii/parts/exe/theme/colorwhite.css
@@ -1,7 +1,7 @@
 :root {
 	--background-color: #fff;
 	--main-color: #900;
-	--drag-color: #6c0;
+	--drag-color: #9cf;
 	--line-color: #433;
 	--click-color: #fc0;
 }
