--- a/riffshareiii/parts/exe/theme/timeselect.css
+++ b/riffshareiii/parts/exe/theme/timeselect.css
@@ -4,17 +4,17 @@
 }
 
 .positionMark1 {
-	stop-color: var(--line-color);
+	stop-color: var(--drag-color);
 	stop-opacity: 0%;
 }
 
 .positionMark2 {
-	stop-color: var(--line-color);
+	stop-color: var(--drag-color);
 	stop-opacity: 50%;
 }
 
 .positionMark3 {
-	stop-color: var(--line-color);
+	stop-color: var(--drag-color);
 	stop-opacity: 100%;
 }
 
