--- a/riffshareiii/parts/exe/theme/mixer.css
+++ b/riffshareiii/parts/exe/theme/mixer.css
@@ -15,6 +15,13 @@
 	stroke-opacity: 90%;
     pointer-events: none;
 }
+.mixMuteLine{
+    stroke: var(--main-color);
+    stroke-linejoin: round;
+    stroke-width: calc(0.95*var(--tapSize));
+	stroke-opacity: 8%;
+    pointer-events: none;
+}
 .mixDropClick{
     fill: red;/* var(--click-color); */
 	fill-opacity: 0.001%;
@@ -30,6 +37,13 @@ cursor:col-resize;
     stroke-linejoin: round;
     stroke-width: calc(0.95*var(--tapSize));
 	stroke-opacity: 33%;
+    pointer-events: none;
+}
+.mixMuteSub{
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(0.95*var(--tapSize));
+	stroke-opacity: 8%;
     pointer-events: none;
 }
 
@@ -311,6 +325,12 @@ cursor:col-resize;
 .automationBgDot{
 	fill: var(--main-color);
 	fill-opacity:95%;
+    stroke: none;
+	pointer-events: none;
+}
+.automationMuteDot{
+	fill: var(--main-color);
+	fill-opacity:8%;
     stroke: none;
 	pointer-events: none;
 }
