--- a/riffshareiii/parts/exe/theme/sampler.css
+++ b/riffshareiii/parts/exe/theme/sampler.css
@@ -14,6 +14,12 @@
     stroke: none;
 	pointer-events: none;
 }
+.samplerDrumMuteBg{
+	fill: var(--main-color);
+	fill-opacity:10%;
+    stroke: none;
+	pointer-events: none;
+}
 .samplerDrumDotActive23542354{
 	fill: var(--click-color);
 	fill-opacity2:75%;
@@ -22,6 +28,12 @@
 .samplerDrumDotLine{
 	fill: var(--main-color);
 	fill-opacity33:95%;
+    stroke: none;
+	pointer-events: none;
+}
+.samplerDrumMuteLine{
+	fill: var(--main-color);
+	fill-opacity:10%;
     stroke: none;
 	pointer-events: none;
 }
