--- a/riffshareiii/parts/exe/theme/colordarkgreen.css
+++ b/riffshareiii/parts/exe/theme/colordarkgreen.css
@@ -6,7 +6,7 @@
 	--click-color: #360;
 
 }
-#pagediv {
+#tileLevelSVG {
 	background-image: url("bg/green.png");
 	background-size: cover;
 	background-position-x: center;
