--- a/riffshareiii/parts/exe/theme/colordarkred.css
+++ b/riffshareiii/parts/exe/theme/colordarkred.css
@@ -6,7 +6,7 @@
 	--click-color: #c01;
 }
 
-#pagediv {
+#tileLevelSVG {
 	background-image: url("bg/logo.png");
 	background-size2: cover;
 	background-position-x: left;
