--- a/riffshareiii/parts/exe/theme/colorneon.css
+++ b/riffshareiii/parts/exe/theme/colorneon.css
@@ -5,7 +5,7 @@
 	--line-color: #ffc;
 	--click-color: #c39;
 }
-#pagediv {
+#tileLevelSVG {
 	background-image: url("bg/neon.png");
 	background-size: cover;
 	background-position-x: center;
